--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "graphql": "^16.8.1",
+    "lodash": "^4.17.21",
     "mongoose": "^8.2.0"
   },
   "devDependencies": {
@@ -27,6 +28,7 @@
     "@graphql-codegen/typescript-resolvers": "^4.0.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20.11.20",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
