--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,9 @@
     "express": "^4.18.2",
     "graphql": "^16.8.1",
     "lodash": "^4.17.21",
-    "mongoose": "^8.2.0"
+    "mongoose": "^8.2.0",
+    "winston": "^3.11.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
