--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "graphql": "^16.8.1",
     "lodash": "^4.17.21",
     "mongoose": "^8.2.0",
+    "reflect-metadata": "^0.2.1",
     "winston": "^3.11.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
